--- a/masterbit.cbp
+++ b/masterbit.cbp
@@ -39,15 +39,19 @@
 			<Add directory="C:/mingwlib/lib/" />
 		</Linker>
 		<Unit filename="include/mbaudio.h" />
+		<Unit filename="include/mbbackground.h" />
 		<Unit filename="include/mblua.h" />
 		<Unit filename="include/mbprint.h" />
 		<Unit filename="include/mbsdl2.h" />
+		<Unit filename="include/mbsprite.h" />
 		<Unit filename="include/mbtexture.h" />
 		<Unit filename="masterbit.cpp" />
 		<Unit filename="src/mbaudio.cpp" />
+		<Unit filename="src/mbbackground.cpp" />
 		<Unit filename="src/mblua.cpp" />
 		<Unit filename="src/mbprint.cpp" />
 		<Unit filename="src/mbsdl2.cpp" />
+		<Unit filename="src/mbsprite.cpp" />
 		<Unit filename="src/mbtexture.cpp" />
 		<Extensions>
 			<code_completion />
